Fix buttons overflow issue

--- a/pages/dashboard/index.scss
+++ b/pages/dashboard/index.scss
@@ -7,6 +7,9 @@
 
 .godam-dashboard-container {
 	background-color: #fff;
+	overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
 }
 
 .dashboard-container {
